<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/expense_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_background">

    <fragment
        android:id="@+id/side_menu_fragment"
        android:name="com.personal_finance_app.SideMenuFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp" />

    <!-- User Profile Fragment -->
    <fragment
        android:id="@+id/user_profile_fragment"
        android:name="com.personal_finance_app.UserProfileFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/side_menu_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Filter Spinner for Expenses -->
    <TextView
        android:id="@+id/logged_expenses_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/jersey"
        android:text="@string/logged_expenses_title"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_profile_fragment" />

    <Spinner
        android:id="@+id/expenseFilterSpinner"
        android:layout_width="177dp"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#C0ACEB"
        android:entries="@array/bill_frequencies_with_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logged_expenses_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expenses_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/expenseFilterSpinner"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itemIconTint="@color/bottom_nav_color"
        app:itemTextColor="@color/bottom_nav_color"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="#AFF9FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:tint="@android:color/white"
        app:backgroundTint="@color/teal_200"
        app:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="@id/nav_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
