<resources>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string-array name="expense_types">
        <item>Eating Out</item>
        <item>Transportation</item>
        <item>Grocery</item>
        <item>Utilities</item>
        <item>Rent</item>
        <item>Entertainment</item>
        <item>Healthcare</item>
...
    <string name="full_name">Full name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="agree">I\’ve read and agree to the</string>
    <string name="privacyPolicyLink">terms of privacy policy</string>
    <string name="register">REGISTER</string>
    <string name="alreadyAccount">Already have an account?</string>
    <string name="loginText">LOGIN◀</string>

    <!-- Login Activity -->
    <string name="login">Log in</string>
    <string name="loginButton">LOGIN</string>
...
