<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="#10C6D6"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/oneUp"
        android:layout_width="325dp"
        android:layout_height="175dp"
        android:src="@drawable/one_up" />

    <TextView
        android:id="@+id/welcomeMessage"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/welcomeUser"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/pixelify_sans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/pixelify_sans"
        android:text="@string/welcomeDesc"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/proceedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@null"
        app:srcCompat="@drawable/get_started"
        app:tint="@null" />

</LinearLayout>